exports[`PhotosList component should render correctly a loading view if isFetching is true 1`] = `
<_translate
  loadingType="photos_fetching" />
`;

exports[`PhotosList component should render correctly a loading view if isFirstFetch is true 1`] = `
<_translate
  loadingType="photos_fetching" />
`;

exports[`PhotosList component should render correctly a loading view if isIndexing is true 1`] = `
<_translate
  loadingType="photos_indexing" />
`;

exports[`PhotosList component should render correctly a loading view if isWorking is true 1`] = `
<_translate
  loadingType="photos_upload" />
`;

exports[`PhotosList component should render correctly a timeline of photos according a photos array 1`] = `
<div
  role="contentinfo">
  <div
    class="pho-section">
    <h3>
      January 0001
    </h3>
    <Photo
      photo={
        Object {
          "_id": "33dda00f0eec15bc3b3c59a615001ac8",
          "created_at": "0001-01-01T00:00:00Z",
          "name": "MonImage.jpg",
          "size": "150000",
          "updated_at": "0001-01-01T00:00:00Z",
        }
      } />
  </div>
</div>
`;

exports[`PhotosList component should render correctly an empty view if photos is empty 1`] = `
<div
  role="contentinfo">
  <_translate
    emptyType="photos" />
</div>
`;
